# ocr-api

./: .gitignore  Dockerfile  README.md  main.py  models.py  pyproject.toml
