[tool.poetry]
name = "ocr-api"
version = "0.1.0"
description = ""
authors = ["Benji Speer <benjibuiltit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
paddlepaddle = "^2.3.1"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
