[tool.poetry]
name = "ocr-api"
version = "0.1.0"
description = ""
authors = ["Benji Speer <benjibuiltit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.18.2"
httpx = "^0.23.0"
fastapi = "^0.110.0"
paddleocr = "^2.7.0.3"
paddlepaddle = "^2.6.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
